# fsoft2026_1DB_3

./: .gitignore
Documentation/Iteration01/: FUNCIONAMENTO.MD  REGRAS_FSOFT.md  Relatorio_Iteracao01.tex  TR_Iteration01.tex  test.tex
Documentation/Iteration01/diagramas/: diagrama_04.drawio  (+13 more)
Documentation/Iteration02/: fsoft2026_1DB_3_TR1_IT2.aux  fsoft2026_1DB_3_TR1_IT2.tex
Documentation/Iteration03/: fsoft2026_1DB_3_TR1_IT3.tex
Project/: CMakeLists.txt  caixas.csv  categorias.csv  main.cpp  produtos.csv
Project/include/controller/: CatalogoController.h  CategoriaController.h  ClienteController.h  Controller.h  SessaoController.h  VendaController.h
Project/include/dto/: CaixaDTO.h  CategoriaDTO.h  ClienteDTO.h  ProdutoDTO.h  PromocaoDTO.h  VendaDTO.h
Project/include/exceptions/: DataConsistencyException.h  DuplicatedDataException.h  InvalidDataException.h  NoDataException.h
Project/include/mappers/: CaixaMapper.h  CategoriaMapper.h  ClienteMapper.h  ProdutoMapper.h  PromocaoMapper.h  VendaMapper.h
Project/include/model/: Admin.h  Caixa.h  Categoria.h  Cliente.h  ItemVenda.h  Ponto.h  Pontos.h  Produto.h  Promocao.h  Utilizador.h  Venda.h  promoçao.h
Project/include/repo/: SupermercadoRepository.h
Project/include/services/: CaixaService.h  CategoriaService.h  ClienteService.h  ProdutoService.h  PromocaoService.h  VendaService.h
Project/include/view/: AdminView.h  CaixaView.h  CatalogoView.h  CategoriaView.h  ClienteView.h  MainMenuView.h  ProdutoView.h  PromocaoView.h  Utils.h  VendaView.h  View.h
Project/src/controller/: CatalogoController.cpp  CategoriaController.cpp  ClienteController.cpp  Controller.cpp  SessaoController.cpp  VendaController.cpp
Project/src/exceptions/: DataConsistencyException.cpp  DuplicatedDataException.cpp  InvalidDataException.cpp  NoDataException.cpp
Project/src/mappers/: CaixaMapper.cpp  CategoriaMapper.cpp  ClienteMapper.cpp  ProdutoMapper.cpp  PromocaoMapper.cpp  VendaMapper.cpp
Project/src/model/: Admin.cpp  Caixa.cpp  Categoria.cpp  Cliente.cpp  ItemVenda.cpp  Ponto.cpp  Pontos.cpp  Produto.cpp  Promocao.cpp  Utilizador.cpp  Venda.cpp
Project/src/repo/: SupermercadoRepository.cpp
Project/src/services/: CaixaService.cpp  CategoriaService.cpp  ClienteService.cpp  ProdutoService.cpp  PromocaoService.cpp  VendaService.cpp
Project/src/view/: AdminView.cpp  CaixaView.cpp  CatalogoView.cpp  CategoriaView.cpp  ClienteView.cpp  MainMenuView.cpp  ProdutoView.cpp  PromocaoView.cpp  Utils.cpp  VendaView.cpp  View.cpp
ProjectTester/src/: CaixaServiceTest.cpp  CategoriaServiceTest.cpp  ClienteServiceTest.cpp  ProdutoServiceTest.cpp  PromocaoServiceTest.cpp  VendaServiceTest.cpp
(+57 files in other folders)
